NEW253157
constexpr std::count does not compile on GCC prior to version 10
https://bugs.webkit.org/show_bug.cgi?id=253157
Summary constexpr std::count does not compile on GCC prior to version 10
Seija K.
Reported 2023-03-01 07:58:52 PST
It also does not compile for the standard library on PlayStation, even with clang.
Attachments
Seija K.
Comment 1 2023-03-01 08:02:05 PST
Radar WebKit Bug Importer
Comment 2 2023-03-08 07:59:14 PST
Note You need to log in before you can comment on or make changes to this bug.