Support constexpr std::count on non-Playstation builds https://bugs.webkit.org/show_bug.cgi?id=253157

This does not compile on Playstation, so let us change the check
to conditionally check for those at compile time.

* Source/WebCore/PAL/pal/text/TextCodecSingleByte.cpp: Add preprocessor
  check against PlayStation before declaring size to be a const variable
  or constexpr.